--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
+
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700;900&display=swap');
+
+*{
+  font-family:  'cairo', sans-serif;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  direction: rtl;
+}
+body {
+  direction: rtl;
+  margin: 0;
+  padding : 0 ;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+a{
+  text-decoration: none;
+  color : "black"
+}
+ul{
+  list-style: none;
+  padding-left : 0 ;
+  /* padding: 0; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+
+}
+/* style scroll bar  */
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  height : 5px ;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #DCDCDC; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #afafaf; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
 }
